--- a/src/components/comicList/comicList.css
+++ b/src/components/comicList/comicList.css
@@ -1,9 +1,14 @@
 .comics{
+    position: relative;
+    top: -30px;
     user-select: none;
 }
 
 .comics h2{
-    text-align: center;
+    margin: 0;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    text-align: initial;
 }
 
 .comic-list{
