--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
   text-align: center;
   font-family: 'Roboto', sans-serif;
   color: white;
-  background-color: #16212c;
+  background-color: #0d1722;
 }
 
 *{
@@ -29,13 +29,13 @@ body {
 .character-vertical-gradient-bottom{
   width: inherit;
   height: inherit;
-  background: linear-gradient(to top, #16212c 0%, transparent 80%);
+  background: linear-gradient(to top, #0d1722 0%, transparent 80%);
 }
 
 .character-vertical-gradient-top{
   width: inherit;
   height: inherit;
-  background: linear-gradient(to bottom, #16212c, transparent 100%);
+  background: linear-gradient(to bottom, #0d1722, transparent 100%);
 }
 
 .character-horizontal-gradient-left{
