--- a/src/components/lists/list.css
+++ b/src/components/lists/list.css
@@ -41,6 +41,10 @@
     transition: all ease 0.3s;
 }
 
+.list-item:hover .list-item-name{
+    opacity: 1;
+}
+
 .list-item:hover img{
     transform: scale(1.1);
 }
@@ -71,7 +75,7 @@
 }
 
 .left-icon, .right-icon{
-    opacity: 0.7;
+    opacity: 0.9;
 }
 
 .left-navigate-button{
@@ -79,11 +83,11 @@
     border-radius: 0 10px 10px 0;
 }
 
-.left-navigate-button:hover{
+.left-navigate-button:hover, .right-navigate-button:hover{
     background-color: rgba(13, 26, 41, 0.8);
 }
 
-.left-navigate-button:hover .left-icon{
+.left-navigate-button:hover .left-icon, .right-navigate-button:hover .right-icon{
     transform: scale(1.1);
     opacity: 1;
     color: #0DCAF0;
@@ -94,12 +98,3 @@
     border-radius: 10px 0 0 10px;
 }
 
-.right-navigate-button:hover{
-    background-color: rgba(13, 26, 41, 0.8);
-}
-
-.right-navigate-button:hover .right-icon{
-    transform: scale(1.1);
-    opacity: 1;
-    color: #0DCAF0;
-}
