--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -10,6 +10,7 @@ input:focus, textarea:focus, select:focus{
     padding: 30px 0px 30px 0px;
     height: 35px;
     width: 50%;
+    margin-top: 100px;
 }
 
 .search-field {
@@ -26,7 +27,7 @@ input:focus, textarea:focus, select:focus{
     width: 100px;
     border-style:none;
     border-radius: 0px 5px 5px 0px;
-    background: rgba(255, 255, 255, 0.2);
+    background: #23303D;
     color: white;
     justify-content: center;
     align-items: center;
@@ -36,7 +37,6 @@ input:focus, textarea:focus, select:focus{
 }
 
 .search-button:hover{
-    background: rgba(255, 255, 255, 0.1);
     color: #0DCAF0;
 }
 
