--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
   text-align: center;
   font-family: 'Roboto', sans-serif;
   color: white;
-  background-color: #0d1722;
+  background-color: #151515;
 }
 
 *{
@@ -29,17 +29,18 @@ body {
 .character-vertical-gradient-bottom{
   width: inherit;
   height: inherit;
-  background: linear-gradient(to top, #0d1722 0%, transparent 80%);
+  min-height: 300px;
+  background: linear-gradient(to top, #151515 0%, transparent 80%);
 }
 
 .character-vertical-gradient-top{
   width: inherit;
   height: inherit;
-  background: linear-gradient(to bottom, #0d1722, transparent 100%);
+  background: linear-gradient(to bottom, #151515, transparent 100%);
 }
 
 .character-horizontal-gradient-left{
   width: inherit;
   height: inherit;
-  background: linear-gradient(to right, #16212c, transparent 50%);
+  background: linear-gradient(to right, #151515, transparent 50%);
 }
