--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,6 @@
 .footer{
-    height: 25px;
-    font-size: 14px;
+    padding-top: 50px;
+    padding-bottom: 10px;
+    font-size: 12px;
     opacity: 0.8;
 }
